# bazel_python_repro

./: BUILD.bazel  README.md  WORKSPACE.bazel  my_python_rule.bzl
portable_python/: BUILD.bazel  sitecustomize.py
